# water_opengl

./: .gitignore  CMakeLists.txt  README.md  water
glad/include/glad/: glad.h
glad/src/: glad.c
renderer/: BufferLayout.h  CircleMesh.cpp  CircleMesh.h  CircleRenderer.cpp  CircleRenderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
shader_files/: fragment.glsl  vertex.glsl
src/: main.cpp
